# yelos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  design.yml  discussion.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  ruff-format.yml  stale.yml
experiments/arbiter/: curves.md
experiments/finitude/: divergence_notes.md  model_comparison.json
experiments/shadow/: intensity_ab.json
src/yelos/: __init__.py  __main__.py  config.py  config_defaults.py  engine_bridge.py  outbox.py  persistence.py  server.py  session.py  sovereignty.py
tests/: conftest.py  test_arbiter.py  test_arbitrate_mcp.py  test_finitude.py  test_guidance_mcp.py  test_outbox.py  test_persistence_mcp.py  test_primal.py  test_process_lifecycle_mcp.py  test_process_lock_concurrency_mcp.py  test_shadow.py  test_sovereignty.py  test_structure.py
tests/arbiter/: test_accounting.py  test_adversarial.py  test_compat_golden.py  test_concurrency.py  test_distinguishability.py  test_duel.py  test_explain.py  test_guards_differential.py  test_hysteresis.py  test_lattice.py  test_migration.py  test_pipeline.py  test_policy_invariants.py  test_viz_golden.py
tests/bench/: test_clock.py  test_concern.py  test_dsl.py  test_fakes.py  test_harness.py  test_internal.py  test_library.py  test_memory_dim.py  test_metrics.py  test_regression.py  test_reports.py  test_sovereignty_adversarial.py  test_structure_bench.py  test_synth.py
tests/distill/: adversarial_corpus.jsonl  conftest.py  stub_model.py  test_concurrency.py  test_corpus.py  test_corpus_privacy.py  test_determinism.py  test_eval.py  test_gate_interception.py  test_no_torch_in_core.py  test_optin_smoke.py  test_packaging.py  test_rerank_divergence.py  test_runtime_decision_table.py  test_trainer_extras.py  test_trainer_ngram.py  test_viz_golden.py
tests/evolution/: conftest.py  test_determinism_registry_coverage.py  test_genome_registry.py  test_guards_iron.py  test_lineage_integrity.py  test_lineage_rollback.py  test_optin_smoke.py  test_overlay_precedence.py  test_selection.py  test_theory_trace.py  test_variation_determinism.py  test_velocity_bound.py
tests/finitude/: __init__.py  conftest.py  test_anthology_completeness.py  test_anthology_golden.py  test_compat_v01.py  test_concurrency.py  test_dayfacts_concern_source.py  test_epochs_dualtrack.py  test_gate.py  test_integration_crossmodule.py  test_ledger_ext.py  test_models_distinguish.py  test_models_property.py  test_projection.py  test_rites.py  test_theory_trace.py  test_viz_golden.py
tests/guidance/: test_audit_trace.py  test_continuity_x4.py  test_lattice_properties.py  test_profiles_matrix.py  test_rules_enumeration.py  test_ruleset_export.py  test_steward_matrix.py  test_whitelist_ast.py  test_zero_drift_golden.py
tests/intrinsic/: test_circadian.py  test_dreamwork.py  test_field_authorship.py  test_field_numerics.py  test_integration.py  test_migration.py  test_moments.py  test_policies_common.py  test_policy_distinguishability.py  test_scheduler.py  test_sim_30d.py  test_theory_trace.py  test_threshold_compat.py  test_viz.py
tests/memory/: _time_helpers.py  test_forgetting.py  test_l1.py  test_l2.py  test_l3.py  test_ppmi_svd.py  test_tokenizer.py
tests/primal/: test_compat_v01.py  test_composer.py  test_determinism_registry.py  (+6 more)
(+352 files in other folders)
